--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,17 @@
     <artifactId>GameServer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <jettyVersion>9.4.8.v20171121</jettyVersion>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jettyVersion}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
